{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 1,
  "lineage": "21e43f16-06dd-618c-2d7a-cd76326a177c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966994807536:security-group/sg-07e2181c3e43ce4d7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07e2181c3e43ce4d7",
            "ingress": [],
            "name": "SecurityGroup01",
            "name_prefix": "",
            "owner_id": "966994807536",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Team": "DevOps"
            },
            "tags_all": {
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-083bd8d7d7435736c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "966994807536",
            "id": "sg-07e2181c3e43ce4d7",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966994807536:security-group/sg-0aa4b5db32f043ce5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aa4b5db32f043ce5",
            "ingress": [],
            "name": "SecurityGroup02",
            "name_prefix": "",
            "owner_id": "966994807536",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Team": "DevOps"
            },
            "tags_all": {
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-083bd8d7d7435736c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "966994807536",
            "id": "sg-0aa4b5db32f043ce5",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}